--- a/WebContent/addEvolutionDetailOld.html
+++ b/WebContent/addEvolutionDetailOld.html
@@ -114,7 +114,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='#'><span>Servicios</span></a></li>
-				   <li><a href='#'><span>Suministros</span></a></li>
+				   <li><a href='#'><span>Farmacia</span></a></li>
 				   <li><a href='#'><span>Unidades</span></a></li>
 				   <li><a href='#'><span>Especialistas</span></a></li>
 				   <li><a href='#'><span>Responsables de Pago</span></a></li>
