--- a/WebContent/editHospitalizationOld.html
+++ b/WebContent/editHospitalizationOld.html
@@ -55,7 +55,7 @@
 					    <li><a class="active" href="hospitalization.html">Hospitalización</a></li><li><a href="users.html">Usuarios</a></li>
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
-						<li><a href="supplyAreas.html">Suministros</a></li>
+						<li><a href="supplyAreas.html">Farmacia</a></li>
 						<li><a href="departments.html">Unidades</a></li>
 						<li><a href="doctors.html">Especialistas</a></li><li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
 						<li><a href="bank.html">Cajas</a></li>
@@ -73,7 +73,7 @@
 					    <li><a href="#tabs-1">Paciente</a></li>
 					    <li><a href="#tabs-2">Protocolos</a></li>
 					    <li><a href="#tabs-3">Servicios</a></li>
-					    <li><a href="#tabs-4">Suministros</a></li>
+					    <li><a href="#tabs-4">Farmacia</a></li>
 					    <li><a href="#tabs-5">Evolución</a></li>
 					    <li><a href="#tabs-6">Signos Vitales</a></li>
 			  		</ul>
