--- a/WebContent/editUser.html
+++ b/WebContent/editUser.html
@@ -131,7 +131,7 @@
 					    <li><a class="active" href="users.html">Usuarios</a></li>
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
-						<li><a href="supplyAreas.html">Suministros</a></li>
+						<li><a href="supplyAreas.html">Farmacia</a></li>
 						<li><a href="departments.html">Unidades</a></li>
 						<li><a href="doctors.html">Especialistas</a></li>
 						<li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
