--- a/WebContent/estimations.html
+++ b/WebContent/estimations.html
@@ -81,7 +81,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
@@ -171,6 +171,12 @@
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/print.png"  height="16" width="16" title="Imprimir" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
 											<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
 												onclick="return loadVars(1003,'1003');" >
