--- a/WebContent/pendingAdmissionDischarges.html
+++ b/WebContent/pendingAdmissionDischarges.html
@@ -60,14 +60,19 @@
 	<div id="container">
 		<div id="header">
         	<img alt="logo" src="./images/logo.png"/>
-        </div>         
+        </div>    
+         <nav>
+		      <ul>
+		      	 <li><a href="#">Bienvenido, Prueba</a></li>
+		        <li><a href="pendingAdmissionDischarges.html">Altas Pendientes<span class="badge red">3</span></a></li>
+		      </ul>
+	    </nav>        
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 	    	<ul>
             	<li class="menuitem"><a href="admitPatientForm.html">Admitir Paciente</a></li>
             </ul>
-            <div class="menuitemRight"><a href="pendingAdmissionDischarges.html">Altas Admisión Pendientes</a><span class="notification-bubble" title="Notifications" style="background-color: rgb(245, 108, 126); display: inline;">3</span></div>
-			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
+            <div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
 		<div id='cssmenu'>
 				<ul>
@@ -84,7 +89,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
@@ -117,7 +122,7 @@
 										<td>01/10/2013 09:00 pm</td>
 										<td>02/10/2013 12:00 pm</td>
 										<td>
-											<a href="#" style="color: transparent" >
+											<a href="editAdmissionEstimation.html" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
