--- a/WebContent/showHospitalizationOld.html
+++ b/WebContent/showHospitalizationOld.html
@@ -82,7 +82,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
@@ -99,7 +99,7 @@
 					    <li><a href="#tabs-1">Paciente</a></li>
 					    <li><a href="#tabs-2">Protocolos</a></li>
 					    <li><a href="#tabs-3">Servicios</a></li>
-					    <li><a href="#tabs-4">Suministros</a></li>
+					    <li><a href="#tabs-4">Farmacia</a></li>
 					    <li><a href="#tabs-5">Evolución</a></li>
 					    <li><a href="#tabs-6">Signos Vitales</a></li>
 			  		</ul>
