--- a/WebContent/supplies.html
+++ b/WebContent/supplies.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Suministros</title>
+	<title>Insumos</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -60,8 +60,8 @@
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 			<ul>
-            	<li class="menuitem"><a href="supplyAreas.html">Ver Áreas Suministros</a></li>
-            	<li class="menuitem"><a href="createSupply.html" style="margin-left:15px;">Crear Suministro</a></li>
+            	<li class="menuitem"><a href="supplyAreas.html">Ver Áreas Insumos</a></li>
+            	<li class="menuitem"><a href="createSupply.html" style="margin-left:15px;">Crear Insumo</a></li>
             </ul>
 	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
@@ -80,7 +80,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li class='active'><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li class='active'><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
@@ -90,7 +90,7 @@
 				</ul>
 			</div>
 		<div id="content">  
-			<h2>Suministros:</h2>
+			<h2>Insumos:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -159,9 +159,9 @@
 		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Suministro</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Insumo</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el suministro '<span class="cliente"></span>'? </span> <br><br>
+				<span>¿Está seguro que desea eliminar el insumo '<span class="cliente"></span>'? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
