--- a/WebContent/editProtocol.html
+++ b/WebContent/editProtocol.html
@@ -45,7 +45,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
@@ -243,7 +243,7 @@
 							    		<td><input type="checkbox"></td>
 							    	</tr>
 							    	<tr>
-							    		<td>Cirujano Ayudante Ii</td>
+							    		<td>Cirujano Ayudante II</td>
 							    		<td>V-7103598</td>
 							    		<td>Bs. <input type="text" value="4500"></td>
 							    		<td><input type="checkbox"></td>
