--- a/WebContent/editSupply.html
+++ b/WebContent/editSupply.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Editar Suministro</title>
+		<title>Editar Insumo</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -18,9 +18,9 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="supplyAreas.html">Ver Áreas Suministros</a></li>
-	            	<li class="menuitem"><a href="supplies.html">Ver Suministros</a></li>
-	            	<li class="menuitem"><a href="createSupply.html">Crear Suministro</a></li>
+	            	<li class="menuitem"><a href="supplyAreas.html">Ver Áreas Insumos</a></li>
+	            	<li class="menuitem"><a href="supplies.html">Ver Insumos</a></li>
+	            	<li class="menuitem"><a href="createSupply.html">Crear Insumo</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -39,7 +39,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li class='active'><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li class='active'><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
@@ -49,7 +49,7 @@
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Editar Suministro:</h2>
+	        	<h2>Editar Insumo:</h2>
 				<br>
 				<fieldset>
 					<label for="name">Nombre:</label>
