--- a/WebContent/facturacion/index.html
+++ b/WebContent/facturacion/index.html
@@ -9,7 +9,13 @@
 	<div id="container">
 		<div id="header">
             <img alt="logo" src="../images/logo.png"/>
-        </div>  
+        </div>    
+         <nav>
+		      <ul>
+		      	 <li><a href="#">Bienvenido, Prueba</a></li>
+		        <li><a href="../pendingAccountSummary.html">Prefacturas por Generar<span class="badge red">3</span></a></li>
+		      </ul>
+	    </nav>
         <div id="menu">
 			<div class="menuitemHome"><a href="#">Home</a></div>	
 			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
