--- a/WebContent/searchProtocols.html
+++ b/WebContent/searchProtocols.html
@@ -68,7 +68,17 @@
 			var first = getUrlVars()["function"];
 			if (first != null){
 				first = first.replace(/\+/g, ' ');
-				if (first.indexOf("Estimation") > 0){
+				if (first.indexOf("Admission") > 0){
+					$("#admission").attr('class', 'active');
+					if (first == "editAdmissionEstimation")
+						$("#form").attr('action', 'editAdmissionEstimation.html#tabs-2');
+				}
+				else if (first.indexOf("Pharmacy") > 0){
+					$("#supplyAreas").attr('class', 'active');
+					if (first == "editPharmacyEstimation")
+						$("#form").attr('action', 'editPharmacyEstimation.html#tabs-2');
+				}
+				else if (first.indexOf("Estimation") > 0){
 					$("#estimation").attr('class', 'active');
 					if (first == "editEstimation")
 						$("#form").attr('action', 'editEstimation.html#tabs-2');
@@ -123,7 +133,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li id="supplyAreas"><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li id="supplyAreas"><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
