--- a/WebContent/showEstimationForAdmission.html
+++ b/WebContent/showEstimationForAdmission.html
@@ -57,7 +57,7 @@
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
-				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Farmacia</span></a></li>
 				   <li><a href='departments.html'><span>Unidades</span></a></li>
 				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
