--- a/WebContent/accountMovements.html
+++ b/WebContent/accountMovements.html
@@ -87,7 +87,7 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li><a href='bank.html'><span>Cajas</span></a></li>
 				   <li class='active'><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li class='last'><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
+				   <li><a href='accounts.html'><span>Cuentas Pendientes</span></a></li><li class='last'><a href='billing.html'><span>Facturación</span></a></li>
 				</ul>
 		</div>
 		<div id="content">  
