--- a/WebContent/admission.html
+++ b/WebContent/admission.html
@@ -65,6 +65,7 @@
 		      <ul>
 		      	 <li><a href="#">Bienvenido, Prueba</a></li>
 		        <li><a href="pendingAdmissionDischarges.html">Altas Pendientes<span class="badge red">3</span></a></li>
+		        <li><a href="pendingCreditNotesReview.html">Prefacturas por Revisar<span class="badge red">3</span></a></li>
 		      </ul>
 	    </nav>         
         <div id="menu">
