--- a/WebContent/searchProtocols.html
+++ b/WebContent/searchProtocols.html
@@ -68,7 +68,12 @@
 			var first = getUrlVars()["function"];
 			if (first != null){
 				first = first.replace(/\+/g, ' ');
-				if (first.indexOf("Admission") > 0){
+				if (first.indexOf("CreditNote") > 0){
+					$("#admission").attr('class', 'active');
+					if (first == "editCreditNoteEstimation")
+						$("#form").attr('action', 'editCreditNoteEstimation.html#tabs-2');
+				}
+				else if (first.indexOf("Admission") > 0){
 					$("#admission").attr('class', 'active');
 					if (first == "editAdmissionEstimation")
 						$("#form").attr('action', 'editAdmissionEstimation.html#tabs-2');
